# assistant-whatsapp

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_REMINDERS.md  README.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  interaction_test_cases.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: agenda.py  router.py  tasks.py  webhooks.py
app/core/: config.py  logging.py  time.py
app/db/: models.py
app/integrations/: calendar_google.py  email_inbound.py  whatsapp_meta.py
app/schemas/: agenda.py  task.py  webhook.py
app/services/: agenda_service.py  gemini_client.py  nlp_pipeline.py  reminder_service.py  task_service.py
app/workers/: __init__.py  celery_app.py  jobs.py  reminders.py
docs/: ai-assistant-tech-spec.md
task_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_health.py  test_nlp.py  test_tasks.py  test_whatsapp_meta.py
